<resources>
    <string name="app_name">My Application9</string>
    <string name="pkmon">Chose a Pokemon!!</string>
    <string name="opt1">Charmander</string>
    <string name="opt2">Bulbasaur </string>
    <string name="opt3">Squirtle</string>
    <string name="valid">Validar</string>"
    <string name="icon_description">Icon Pokemon</string>
    <string name="accept">Confirmar</string>
    <string name="cancel">Cancelar</string>


</resources>